Refactor PetController and PetDTO to use PetMapper for improved data handling